# SocketProgrammingProject

./: CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  Handler.h  Hangman  Makefile  README.md  client  client.cpp  cmake_install.cmake  error.h  globals.cpp  globals.h  server  server.cpp  server.out  server_old.cpp  server_oneFile.cpp  structs.h
client/: Game.py  Player.py  config.txt  main.py  utils.py
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
server/: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Handler.h  Hangman  HangmanDawid  HangmanGame.cpp  HangmanGame.h  namespace.cpp  namespace.h  server.cpp  serverDawid.cpp
